--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "dev-start":"ng serve --port 8900 --ssl true -o",
+    "postinstall": "ngcc --tsconfig './tsconfig.json'",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -93,6 +95,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~4.0.7"
+    "typescript": "^3.9.6"
   }
 }
