Completed the project and added the details

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "dev-start":"ng serve --port 8900 --ssl true -o",
+    "dev-start": "ng serve --port 8900 --ssl true -o",
     "postinstall": "ngcc --tsconfig './tsconfig.json'",
     "build": "ng build",
     "test": "ng test",
@@ -25,10 +25,6 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "zxcvbn3": "^0.1.1",
     "angular-mgl-timeline": "^0.3.3",
     "angular-password-strength-meter": "^3.0.1",
     "angular-web-notification": "^2.0.1",
@@ -45,8 +41,9 @@
     "http-server": "^0.12.3",
     "icons": "^1.0.0",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.15",
-    "moment": "^2.27.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
     "ng-circle-progress": "^1.5.1",
     "ng-modal-lib": "0.0.4",
     "ng-multiselect-dropdown": "^0.2.10",
@@ -57,13 +54,18 @@
     "ngx-material-timepicker": "^5.5.3",
     "ngx-moment": "^5.0.0",
     "ngx-slick-carousel": "^0.5.1",
+    "ngx-spinner": "^9.0.0",
     "ngx-toastr": "^13.2.0",
     "ngx-ui-switch": "^10.0.2",
     "pdfmake": "^0.1.68",
     "recordrtc": "^5.5.9",
+    "rxjs": "~6.5.5",
     "save": "^2.4.0",
     "select-files": "^1.0.1",
-    "zxcvbn": "^4.4.2"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.3",
+    "zxcvbn": "^4.4.2",
+    "zxcvbn3": "^0.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
